# lambda-zero

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md
src/: command  command.cpp  command.hpp  constants.cpp  constants.hpp  main.cpp  pieceset.cpp  pieceset.hpp  shape.cpp  shape.hpp
